# simpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
example/: CMakeLists.txt  external_type.cpp  external_type.hpp  internal.cpp  internal.hpp  main.cpp
include/simpl/: simpl.hpp
include/stack_pimpl/: stack_pimpl.hpp
src/: stack_pimpl.cpp
